# DDD_TDD_EVENT_python_example

./: .coverage  model.py  pyproject.toml  test_allocate.py  test_batches.py
